[tool.poetry]
name = "stepflow-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
httpx = "^0.28.1"
pydantic = "^2.11.5"
requests = "^2.32.3"
pyyaml = "^6.0.2"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
email-validator = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
